--- a/src/app/users-list/users-list.component.scss
+++ b/src/app/users-list/users-list.component.scss
@@ -1,3 +1,9 @@
 .gray {
     background-color: rgb(226, 226, 226);
 }
+
+.flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
