--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -18,12 +18,41 @@
     </mat-form-field>
 </div>
 
+<div class="flex">
+
+    <mat-form-field appearance="outline">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Name" [(ngModel)]="name">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <mat-label>Username</mat-label>
+        <input matInput placeholder="Username" [(ngModel)]="username">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <mat-label>Role</mat-label>
+        <mat-select [(ngModel)]="role">
+            <mat-option value="0">
+                User
+            </mat-option>
+            <mat-option value="1">
+                Admin
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <div class="example-button-row">
+        <button mat-raised-button color="primary" (click)="addUser()">Add user</button>
+    </div>
+
+</div>
 
 <mat-selection-list #users>
     <mat-list-option *ngFor="let user of usersList; index as i" [ngClass]="{gray: i%2, flex: true}">
         <div class="flex">
-            <span>{{ user.username }}</span>
             <span>{{ user.name }}</span>
+            <span>{{ user.username }}</span>
             <span>{{ user.role }}</span>
         </div>
     </mat-list-option>
